fix: 🐛 form add prop footerAlign

--- a/packages/ui/src/style/form.scss
+++ b/packages/ui/src/style/form.scss
@@ -18,6 +18,19 @@
       margin-bottom: 0;
       padding: 10px 0;
       background-color: var(--el-mask-color);
+      border-top: 1px solid var(--el-border-color-lighter);
+    }
+  }
+  @include e(footer) {
+    @include when(algin-center) {
+      .el-form-item__content {
+        text-align: center;
+      }
+    }
+    @include when(algin-right) {
+      .el-form-item__content {
+        text-align: right;
+      }
     }
   }
 }
